# cmake-template

./: .gitignore  CMakeLists.txt  index.md
docs-building/assets/: random_image.drawio
docs-building/docs-doxygen/: CMakeLists.txt  Doxyfile.in
docs-building/docs-sphinx/: Doxyfile.in  conf.py  index.rst
docs-building/docs-sphinx/_build/doctrees/: environment.pickle  index.doctree
docs-building/docs-sphinx/_build/doctrees/api/: index.doctree
docs-building/docs-sphinx/_build/doctrees/api/hello-world/: hello_world.doctree
docs-building/docs-sphinx/_build/html/: .buildinfo  dir_c9f489a47e50e0e9f92d3d2e3c7e0f60.html  dir_d44c64559bbebec7f509842c48db8b23.html  genindex.html  index.html  namespacehello__world.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs-building/docs-sphinx/_build/html/_sources/api/: index.rst.txt
docs-building/docs-sphinx/_build/html/api/: index.html
docs-building/docs-sphinx/_build/html/api/hello-world/: hello_world.html
docs-building/docs-sphinx/_build/html/search/: all_0.js  all_1.js  functions_0.js  namespaces_0.js  searchdata.js
docs-building/docs-sphinx/_build/xml/: Doxyfile.xml  dir_c9f489a47e50e0e9f92d3d2e3c7e0f60.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  hello__world_8hpp.xml  index.xml  namespacehello__world.xml
docs-building/docs-sphinx/api/hello-world/: hello_world.rst
docs-building/examples/: say_hello_example.cpp
include/: CMakeLists.txt
include/hello-world/: hello_world.hpp
scripts/cmake/: dependency_graph.cmake  doxygen.cmake
src/: CMakeLists.txt  main.cpp
src/hello-world/: hello_world.cpp
tests/: CMakeLists.txt  prepare_catch.cmake  tests.cpp
